--- a/pipeline_instant_template.yaml
+++ b/pipeline_instant_template.yaml
@@ -12,4 +12,4 @@ spec:
   strategy:
     type: JenkinsPipeline
     jenkinsPipelineStrategy:
-      jenkinsfilePath: jenkins-image-sample.groovy
+      jenkinsfilePath: Jenkinsfile
