some reorganization and tweaks.

--- a/ignore-this/Jenkinsfile
+++ b/ignore-this/Jenkinsfile
@@ -74,6 +74,17 @@ pipeline {
                 } // script
             } // steps
         } // stage
+        stage('test') {
+            steps {
+                script {
+                    openshift.withCluster() {
+                        openshift.withProject() {
+                            echo "All tests passed"
+                        }
+                    }
+                } // script
+            } // steps
+        } // stage
         stage('deploy') {
             steps {
                 script {
