--- a/pipeline_instant_template_external.yaml
+++ b/pipeline_instant_template_external.yaml
@@ -12,4 +12,4 @@ spec:
   strategy:
     type: JenkinsPipeline
     jenkinsPipelineStrategy:
-      jenkinsfilePath: Jenkinsfile
+      jenkinsfilePath: ignore-this/Jenkinsfile-fromblog
